# datascience-monorepo-example

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg
docs/: gen_ref_pages.py
docs/getting_started/: 00-design-principles.md  01-configuration.md  index.md
docs/guides/: 00-mlflow-usage.md  index.md
docs/guides/data_access_layer/: 00-how-to-use-dal.md
docs/guides/feature_store/: 00-derived-features.ipynb
docs/models/: 00-create-new-models.md  01-compatibility-considerations.md
docs/notebooks/: example-notebook-doc.ipynb  index.md
notebooks/: README.md
scripts/: check-author-email  docker-it  docker-run
src/config/: __init__.py  base.py  cli.py  logging.py
src/data_access_layer/: __init__.py  dal.py  files.py
src/datasets/: datasets.py  options.py
src/feature_store/: feature_views.py
src/feature_store/derived_features/: aggregated_features.py  row_features.py
src/feature_store/extract/: extract_feature_view.py  extract_sklearn_feature_view.py
src/models/: imputation.py  mlflow_wrappers.py  predict.py  preprocess.py  train.py  validation.py
src/models/diabetes/: features.py  train.py
src/models/iris/: features.py  train.py
src/models/metrics/: regression.py
tests/: conftest.py
tests/data_access_layer/: test_dal.py  test_files.py
tests/feature_store/derived_features/: test_aggregated_features.py
tests/integration/: test_extract_features.py
tests/models/: conftest.py  test_mlflow.py  test_predict.py
tests/models/metrics/: test_regression.py
