[project]
classifiers = [
  "Topic :: Software Development",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
description = "Data Science Monorepo"
dynamic = ["version", "dependencies"]
name = "datascience"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0",
  "setuptools_scm>=7.1",
]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "python-simplified-semver"

[tool.setuptools.packages.find]
exclude = ["tests"]
where = ["src"]

[tool.setuptools.package-data]
# Non python files that has to be included when installing as package
"*" = ["*.ini", "*.json"]

[tool.black]
exclude = '''
(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build/
    | dist/
    | tmp/
    | \.ipynb_checkpoints
)
'''
# include = '\.pyi?$'
line-length = 120
target_version = ['py310']

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--color=yes --cov=src/ --cov-branch -n auto --doctest-modules"
filterwarnings = ["ignore::DeprecationWarning"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests", "src"]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "notebooks/**",
]
include = ["src"]

[tool.ruff]
ignore = ["E501", "E722"]
line-length = 160
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]  # Ignore `E402` (import violations) in all `__init__.py` files
